--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,24 @@
-< !DOCTYPE html >
-<!-- Socket.io --> <html>
-
+<!DOCTYPE html>
+<html>
     <head>
-        <meta charset="utf-8">
-        <title>Working with Flask and SocketIO</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-        <script src="/static/main.js"></script>
+      <!-- Required meta tags -->
+      <meta charset = "utf-8"> 
+      <link rel="icon" href="./static/favicon.png" /> 
+      <link rel = "apple-touch-icon" href = "./static/favicon.png" /> 
+      <meta name="apple-mobile-web-app-capable" content="yes" /> 
+      <meta name = "apple-mobile-web-app-status-bar-style" content = "black" /> 
+      <meta name="apple-mobile-web-app-title" content="Dashboard"> 
+      <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no" >
+
+      <!-- w3.css -->
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <!-- Local Styles -->
+      <link rel="stylesheet" href="./static/style.css">
+
+      <title>Dashboard</title>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"vintegrity = "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin = "anonymous" > </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+      <script src="/static/main.js"></script>
     </head>
 
     <body>
