--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,25 @@
       <meta charset = "utf-8"> 
       <link rel="icon" href="./static/favicon.png" /> 
       <link rel = "apple-touch-icon" href = "./static/favicon.png" /> 
-      <meta name="apple-mobile-web-app-capable" content="yes" /> 
+      <meta name= "apple-mobile-web-app-capable" content="yes" /> 
       <meta name = "apple-mobile-web-app-status-bar-style" content = "black" /> 
-      <meta name="apple-mobile-web-app-title" content="Dashboard"> 
+      <meta name= "apple-mobile-web-app-title" content="Dashboard"> 
       <meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no" >
 
       <!-- w3.css -->
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <!-- Local Styles -->
-      <link rel="stylesheet" href="./static/style.css">
+      <!-- <link rel="stylesheet" href="./static/style.css"> -->
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}" />
 
       <title>Dashboard</title>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"vintegrity = "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin = "anonymous" > </script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-      <script src="/static/main.js"></script>
+      <script src="{{ url_for('static', filename='main.js')}}"></script>
     </head>
 
     <body>
+       It's {{ date.strftime("%A, %d %B, %Y at %X") }}.
         <div id="logger"></div>
     </body>
 
