refresh broadcast test

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,63 @@
     </head>
 
     <body>
-       It's {{ date.strftime("%A, %d %B, %Y at %X") }}.
+
+      <div class="w3-container w3-round" style=" margin-left: auto; margin-right: auto; width: 25em">
+        <!-- Navigation Bar -->
+        <div class="w3-round w3-bar w3-blue">
+            <button class="w3-round w3-bar-item w3-button tablink w3-bottombar w3-border-red"
+                onclick="openTab(event,'Socket')">Socket</button>
+            <button class="w3-round w3-bar-item w3-button tablink w3-bottombar w3-border-blue"
+                onclick="openTab(event,'Settings')">Settings</button>
+        </div>
+        <br>
+
+      <!-- Socket Tab -->
+      <div id="Socket" class="w3-card-4 w3-dark-grey w3-center w3-round tab">
+        <div class="w3-container w3-blue w3-center w3-round">
+            <h2 class="w3-text-white w3-center">Socket Test</h2>
+        </div>
+        <div class="w3-container w3-center">
+          It's {{ date.strftime("%A, %d %B, %Y at %X") }}.
         <div id="logger"></div>
+            <div class="w3-center" style="width:80%; margin-left: auto; margin-right: auto; width: 20em">
+                <h3 id="sensor_label"></h3>
+
+                <h3 id="sensor_result" class="w3-text-black w3-round"></h3>
+            </div>
+            <div class="w3-section">
+                <button id='refresh' class="w3-button w3-blue w3-round">Refresh</button>
+            </div>
+            <div id="refreshVal">
+            </div>
+        </div>
+    </div>
+
+      <!-- Settings Tab -->
+      <div id="Settings" class="w3-card-4 w3-dark-grey w3-round tab" style="display: none;">
+        <div class="w3-container w3-blue w3-center w3-round">
+            <h2>Purple Air</h2>
+        </div>
+        <div class="w3-container">
+            <form class="w3-container">
+                <p>
+                    <label>Current Sensor Id</label>
+                <p id="currentSensorId">CurrentSensorId</p>
+                </p>
+                <p>
+                    <label>NewSensor Id</label>
+                    <input id="saveSensorId" class="w3-input w3-round" type="text">
+                </p>
+            </form>
+            <div class="w3-section w3-center">
+                <button id="saveSensorBtn" class="w3-button w3-blue w3-round">Save</button>
+            </div>
+        </div>
+      </div>
+
+
+
+       
     </body>
 
 </html>
