--- a/dash_app/templates/index.html
+++ b/dash_app/templates/index.html
@@ -51,6 +51,14 @@
             </div>
             <div id="refreshVal">
             </div>
+            <div class="w3-section">
+                <button id='showMsg' class="w3-button w3-blue w3-round">Show</button>
+            </div>
+            <div class="w3-section">
+                <button id='hideMsg' class="w3-button w3-blue w3-round">Hide</button>
+            </div>
+            <div id="displayMsg">
+            </div>
         </div>
     </div>
 
