--- a/dash_app/templates/index.html
+++ b/dash_app/templates/index.html
@@ -23,26 +23,26 @@
 
     <body>
 
-      <div class="w3-container w3-round" style=" margin-left: auto; margin-right: auto; width: 25em">
+      <div class="w3-container w3-round" style=" margin-left: auto; margin-right: auto; max-width: 50em; padding: 0">
         <!-- Navigation Bar -->
-        <div class="w3-round w3-bar w3-blue">
+        <!-- <div class="w3-round w3-bar w3-blue">
             <button class="w3-round w3-bar-item w3-button tablink w3-bottombar w3-border-red"
                 onclick="openTab(event,'Socket')">Socket</button>
             <button class="w3-round w3-bar-item w3-button tablink w3-bottombar w3-border-blue"
                 onclick="openTab(event,'Settings')">Settings</button>
         </div>
-        <br>
+        <br> -->
 
       <!-- Socket Tab -->
       <div id="Socket" class="w3-card-4 w3-dark-grey w3-center w3-round tab">
-        <div class="w3-container w3-blue w3-center w3-round">
-            <h2 class="w3-text-white w3-center">Socket Test</h2>
-        </div>
+        <!-- <div class="w3-container w3-blue w3-center w3-round"> -->
+            <h1 id="displayMsg" class="w3-text-white w3-green w3-center w3-wide">Loading</h1>
+        <!-- </div> -->
         <div class="w3-container w3-center">
-          It's {{ date.strftime("%A, %d %B, %Y at %X") }}.
-        <div id="logger"></div>
-            <div class="w3-center" style="width:80%; margin-left: auto; margin-right: auto; width: 20em">
-                <h3 id="sensor_label"></h3>
+          <!-- It's {{ date.strftime("%A, %d %B, %Y at %X") }}. -->
+        <!-- <div id="logger"></div> -->
+        <div class="w3-center" style="width:80%; margin-left: auto; margin-right: auto; width: 20em"> 
+                <!-- <h3 id="sensor_label"></h3>
 
                 <h3 id="sensor_result" class="w3-text-black w3-round"></h3>
             </div>
@@ -50,14 +50,14 @@
                 <button id='refresh' class="w3-button w3-blue w3-round">Refresh</button>
             </div>
             <div id="refreshVal">
-            </div>
+            </div> --> 
             <div class="w3-section">
-                <button id='showMsg' class="w3-button w3-blue w3-round">Show</button>
+                <button id='showMsg' class="w3-button w3-blue w3-round">On</button>
+            <!-- </div>
+            <div class="w3-section"> -->
+                <button id='hideMsg' class="w3-button w3-blue w3-round">Off</button>
             </div>
-            <div class="w3-section">
-                <button id='hideMsg' class="w3-button w3-blue w3-round">Hide</button>
-            </div>
-            <div id="displayMsg">
+            <div id="displayMsg2">
             </div>
         </div>
     </div>
